# feedback-intelligence-api

./: .env.example  .gitignore  README.md  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  server.py  test_sentiment_analysis.py
sentiment_analysis/: __init__.py  analyzer.py
static/: mywebscript.js  style.css
templates/: index.html
